<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="266dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#61E8E8E8"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/checkInBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#36B8C9"
            android:orientation="vertical"
            android:paddingStart="25sp"
            android:paddingTop="20dp"
            android:paddingEnd="25sp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/bannerImg"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/bannerdescr"
                app:srcCompat="@drawable/people_mauve"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"

                android:text="@string/text1"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:typeface="normal"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:shadowColor="#2b2b2b"
                android:shadowDx="2"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/text2"
                android:textColor="#FFFFFF"
                android:textSize="27sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/checkInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btnshape"
                android:elevation="5dp"
                android:shadowColor="#2b2b2b"
                android:stateListAnimator="@null"
                android:text="@string/check_inB"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="108dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardsCont"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:paddingRight="25dp"
            android:paddingBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkInBanner">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/text3"
                android:textColor="#293B42"
                android:textSize="21sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/mentalHealthCard"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/mentalImg"
                        android:layout_width="match_parent"
                        android:layout_height="109dp"
                        android:contentDescription="@string/mentalDescr"
                        app:srcCompat="@drawable/sadman" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/mentaltxt"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/chatCard"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/chatImg"
                        android:layout_width="match_parent"
                        android:layout_height="109dp"
                        android:contentDescription="@string/aiDescr"
                        app:srcCompat="@drawable/capture_photoroom_png_photoroom" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/aiText"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/meditationCard"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/meditationImg"
                        android:layout_width="match_parent"
                        android:layout_height="109dp"
                        android:contentDescription="@string/meditationDescr"
                        app:srcCompat="@drawable/meditation" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/meditationtxt"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/breathingCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/breathingImg"
                        android:layout_width="match_parent"
                        android:layout_height="109dp"
                        android:contentDescription="@string/breathingDescr"
                        app:srcCompat="@drawable/breathing" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/breatingtxt"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
